// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea must return the diff between snapshot when TextArea has a disable vs enable autocomplete 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -16,11 +16,11 @@
        />
      </svg>
    </label>
    <BasicTextAreaStyle
      aria-required={false}
-     autoComplete="off"
+     autoComplete="on"
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={false}
`;

exports[`TextArea must return the diff between snapshot when TextArea has a enable vs disable spellchecking 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -23,10 +23,10 @@
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={false}
      rows={5}
-     spellCheck={true}
+     spellCheck={false}
      tabIndex={0}
      value="baz"
    />
  </FakeInputStyle>
`;

exports[`TextArea must return the diff between snapshot when TextArea has a limit of characters or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -18,10 +18,12 @@
    </label>
    <BasicTextAreaStyle
      aria-required={false}
      autoComplete="off"
      id="bar"
+     maxLength="450"
+     minLength="25"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={false}
      rows={5}
`;

exports[`TextArea must return the diff between snapshot when TextArea is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -15,17 +15,17 @@
          d="M0 11.607V16h4.393l8.787-8.787L8.787 2.82zm3.834 3.041h-1.13v-1.352H1.352v-1.13l.96-.96 2.483 2.481zm5.29-10.033c.156 0 .233.078.233.233 0 .07-.024.13-.074.18L3.56 10.75a.245.245 0 0 1-.18.074c-.154 0-.232-.078-.232-.232 0-.07.025-.13.074-.18L8.945 4.69a.244.244 0 0 1 .18-.074zm6.486-1.743L13.126.402a1.312 1.312 0 0 0-.96-.402c-.381 0-.698.134-.951.401L9.463 2.144l4.393 4.393 1.753-1.753c.26-.26.391-.577.391-.95 0-.366-.13-.687-.39-.962z"
        />
      </svg>
    </label>
    <BasicTextAreaStyle
-     aria-required={true}
+     aria-required={false}
      autoComplete="off"
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
-     required={true}
+     required={false}
      rows={5}
      spellCheck={true}
      tabIndex={0}
      value="baz"
    />
`;

exports[`TextArea must return the diff between snapshot with a negative vs a postive Tab Index 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -24,9 +24,9 @@
      onChange={[Function handleChange]}
      placeholder="qux"
      required={false}
      rows={5}
      spellCheck={true}
-     tabIndex="-1"
+     tabIndex="0"
      value="baz"
    />
  </FakeInputStyle>
`;
